refactor: simplify permissions into roles
This also fixes multiple query parameters on `GET /auth/admins`.
